@@ -1,6 +1,6 @@
 # Copyright 2010-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/weboob/weboob-9999.ebuild,v 1.4 2013/08/03 15:08:29 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/weboob/weboob-0g.ebuild,v 1.1 2013/08/03 15:08:29 floppym Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_6,2_7} )
