@@ -1,13 +1,12 @@
 # Copyright 2010-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/weboob/weboob-9998.ebuild,v 1.3 2013/03/25 03:42:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/weboob/weboob-9998.ebuild,v 1.4 2013/08/03 15:08:29 floppym Exp $
 
 EAPI=5
-PYTHON_DEPEND="2:2.5"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="3.*"
+PYTHON_COMPAT=( python{2_6,2_7} )
 
-inherit base distutils
+inherit distutils-r1 gnome2-utils versionator
+
 if [ "$PV" == "9999" ]; then
 	EGIT_REPO_URI="git://git.symlink.me/pub/${PN}/devel.git"
 	inherit git-2
@@ -20,52 +19,63 @@ elif [ "$PV" == "9998" ]; then
 	SRC_URI=""
 else
 	KEYWORDS="~x86 ~amd64"
-	SRC_URI="http://symlink.me/attachments/download/206/${PN}-0.e.tar.gz"
-	S="${WORKDIR}/${PN}-0.e"
+	MY_P="${PN}-$(version_format_string '$1.$2')"
+	SRC_URI="http://symlink.me/attachments/download/229/${MY_P}.tar.gz"
+	S="${WORKDIR}/${MY_P}"
 fi
 
-DESCRIPTION="Weboob (Web Out of Browsers) provides several applications to interact with a lot of websites."
+DESCRIPTION="Weboob (Web Outside of Browsers) provides several applications to interact with a lot of websites."
 HOMEPAGE="http://weboob.org/"
 
 LICENSE="AGPL-3"
 SLOT="0"
 IUSE="X +secure-updates fast-libs"
 
-DEPEND="X? ( >=dev-python/PyQt4-4.9.4-r1[X,phonon] dev-python/pyxdg )"
+DEPEND="X? ( >=dev-python/PyQt4-4.9.4-r1[X,phonon,${PYTHON_USEDEP}] )
+	dev-python/setuptools[${PYTHON_USEDEP}]"
 RDEPEND="${DEPEND}
-	dev-python/prettytable
-	dev-python/html2text
-	dev-python/mechanize
-	dev-python/python-dateutil
-	dev-python/pyyaml
-	dev-python/imaging
-	dev-python/gdata
-	dev-python/feedparser
-	media-video/rtmpdump
+	dev-python/prettytable[${PYTHON_USEDEP}]
+	dev-python/html2text[${PYTHON_USEDEP}]
+	dev-python/mechanize[${PYTHON_USEDEP}]
+	dev-python/python-dateutil[${PYTHON_USEDEP}]
+	dev-python/pyyaml[${PYTHON_USEDEP}]
+	virtual/python-imaging[${PYTHON_USEDEP}]
+	dev-python/gdata[${PYTHON_USEDEP}]
+	dev-python/feedparser[${PYTHON_USEDEP}]
+	dev-python/termcolor[${PYTHON_USEDEP}]
 	secure-updates? ( app-crypt/gnupg )
-	fast-libs? ( dev-python/simplejson dev-python/pyyaml[libyaml] )
-	|| ( dev-lang/python:2.7 dev-lang/python:2.6 dev-python/simplejson )
-	|| ( ( <dev-python/lxml-3.0 ) ( >=dev-python/lxml-3.0 dev-python/cssselect ) )"
+	fast-libs? (
+		dev-python/simplejson[${PYTHON_USEDEP}]
+		dev-python/pyyaml[libyaml,${PYTHON_USEDEP}]
+	)
+	virtual/python-json[${PYTHON_USEDEP}]
+	>=dev-python/lxml-3.0[${PYTHON_USEDEP}]
+	dev-python/cssselect[${PYTHON_USEDEP}]"
 
-DOCS="AUTHORS COPYING ChangeLog README INSTALL"
+DOCS=( AUTHORS COPYING ChangeLog README INSTALL )
 
-set_global_options() {
-	DISTUTILS_GLOBAL_OPTIONS=("* --$(usex X '' 'no-')qt" "* --$(usex X '' 'no-')xdg")
+python_configure_all() {
+	mydistutilsargs=(
+		$(usex X '--qt' '--no-qt')
+		$(usex X '--xdg' '--no-xdg')
+	)
 }
 
-distutils_src_install_pre_hook() {
-	set_global_options
+python_install_all() {
+	distutils-r1_python_install_all
+	insinto /usr/share/${PN}/
+	doins -r contrib/*
 }
 
-distutils_src_install_post_hook() {
-	exeinto "/usr/share/${PN}"
-	doexe contrib/*-munin
-}
-
-distutils_src_compile_pre_hook() {
-	set_global_options
+pkg_preinst() {
+	use X && gnome2_icon_savelist
 }
 
 pkg_postinst() {
-	elog "You should now run \"weboob-config update\" (as your login user)."
+	use X && gnome2_icon_cache_update
+	elog 'You should now run "weboob-config update" (as your login user).'
+}
+
+pkg_postrm() {
+	use X && gnome2_icon_cache_update
 }
